# Magma

./: .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  vcpkg.json
docs/: test.tex
include/: game.hpp  main.hpp  shader.hpp  structs.hpp  window.hpp
shaders/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  data.lua  game.cpp  main.cpp  window.cpp
tests/: CMakeLists.txt  main.cpp
